--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -12,7 +12,9 @@
         <h1>Welcome To My Page</h1>
     </div>
     <div class="text-center">
+        <h3><a th:href="@{/list-user}">List All Users</a></h3>
         <h3><a th:href="@{/register}">Register</a></h3>
+        <h3><a th:href="@{/login}">Login</a></h3>
     </div>
 </div>
 </body>
